correct general alternative page styling to work on smaller devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -501,9 +501,9 @@ footer {
 /*menu page styling*/
 
 .alt-hero-box {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
     background-color: aliceblue;
     height: fit-content;
     margin-top: 30px;
@@ -514,6 +514,8 @@ footer {
 
 .alt-hero-box > p {
     color: #333;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .reduce-width {
